aks-config/iothubux.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iothubux-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iothubux
  template:
    metadata:
      labels:
        app: iothubux
    spec:
      containers:
      - name: iothubux
        image: ghcr.io/ridomin/iotux:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: iothubux-svc
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: iothubux
