aks-config/iotux.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iotux-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iotux
  template:
    metadata:
      labels:
        app: iotux
    spec:
      containers:
      - name: iotux
        image: ghcr.io/ridomin/iotux:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: iotux-svc
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: iotux
