aks-config/mqttux.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mqttux-ridoext-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mqttux
  template:
    metadata:
      labels:
        app: mqttux
    spec:
      containers:
      - name: mqttux
        image: ghcr.io/ridomin/mqttux:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mqttux-svc
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: mqttux
